@@ -1,6 +1,6 @@
 // tag::copyright[]
 /*******************************************************************************
- * Copyright (c) 2019, 2022 IBM Corporation and others.
+ * Copyright (c) 2019, 2025 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
@@ -12,6 +12,8 @@
 package io.openliberty.guides.inventory;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.Properties;
 
@@ -58,23 +60,26 @@ public class InventoryResource {
     URL customURL = null;
     Properties props = null;
     try {
-        customURL = new URL(customURLString);
+        customURL = new URI(customURLString).toURL();
         SystemClient systemClient = RestClientBuilder.newBuilder()
                 .baseUrl(customURL)
                 .register(UnknownUrlExceptionMapper.class)
                 .build(SystemClient.class);
         props = systemClient.getProperties();
+    } catch (URISyntaxException e) {
+        System.err.println("The given URL string is not formatted correctly: "
+                           + customURLString);
     } catch (MalformedURLException e) {
-      System.err.println("The given URL is not formatted correctly: "
-                        + customURLString);
+        System.err.println("The given URL string is not formatted correctly: "
+                           + customURLString);
     }
 
     if (props == null) {
-      return Response.status(Response.Status.NOT_FOUND)
-                     .entity("{ \"error\" : \"Unknown hostname" + hostname
-                             + " or the resource may not be running on the"
-                             + " host machine\" }")
-                     .build();
+        return Response.status(Response.Status.NOT_FOUND)
+                       .entity("{ \"error\" : \"Unknown hostname" + hostname
+                               + " or the resource may not be running on the"
+                               + " host machine\" }")
+                       .build();
     }
 
     manager.add(hostname, props);
@@ -84,12 +89,13 @@ public class InventoryResource {
   @GET
   @Produces(MediaType.APPLICATION_JSON)
   public InventoryList listContents() {
-    return manager.list();
+      return manager.list();
   }
 
   @POST
   @Path("/reset")
   public void reset() {
-    manager.reset();
+      manager.reset();
   }
+
 }
